--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ProjetoOficial@</string>
     <string name="entrar">Entrar</string>
-    <string name="text_cadastro">Crie sua contra</string>
-    
+    <string name="text_cadastro">Crie sua conta</string>
+
 </resources>
