--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">ProjetoOficial@</string>
     <string name="entrar">Entrar</string>
     <string name="text_cadastro">Crie sua conta</string>
+    <string name="title_cadastro">Cadastre-se</string>
+    <string name="cadastrar">Cadastrar</string>
 
 </resources>
