--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="text_cadastro">Crie sua conta</string>
     <string name="title_cadastro">Cadastre-se</string>
     <string name="cadastrar">Cadastrar</string>
-
+    <string name="deslogar">Deslogar</string>
 </resources>
